# remind

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  docker-compose.yml
.sqlx/: query-13d3ecfcd8cbed86c43a9be6d80abcb696bbee39338ead17e7c19d4d655d8eeb.json  query-5ed67f9b919b81a5ed3851c42129e09fac01b4696157de1c229a84d1b0ffb008.json  query-5f80b5c5dac9bdd8620636c98bd254fff9a7dee24c51c41eae289e4666af6b05.json  query-606364c79e0990deb07dfbe6c32b3d302d083ec5333f3a5ce04113c38a041100.json  query-7a58003796a94b23438bb20cc2b0a4c9fac4e68bd020aa98e458eda87af48c1f.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-b381d4867c411a40c74d600c49a2f4558d7dbe4fc90c10dd496d8dc2586be00c.json  query-b702c1ee31be8aeede43e3d35092652c74ece781fe2f66e082573c8d51f1e9db.json  query-bf1e358ef90680e7eca2281da54e57c2f89490e13ab40ecc64a96c49c3bebe80.json  query-c34146cc3f7fc12d39ecbccd2b1b76f644b9194f994f6f6895c369fa6009801b.json  (+4 more)
crates/remind-api/: Cargo.toml
crates/remind-api/src/: config.rs  errors.rs  main.rs  state.rs
crates/remind-api/src/routes/: auth.rs  block.rs  mod.rs  note.rs  workspace.rs
crates/remind-api/src/schemas/: auth.rs  block.rs  mod.rs  note.rs  user.rs  workspace.rs
crates/remind-api/src/utils/: validator.rs
crates/remind-core/: Cargo.toml
crates/remind-core/src/: errors.rs  lib.rs
crates/remind-core/src/dto/: block.rs  mod.rs  note.rs  user.rs  workspace.rs
crates/remind-core/src/entities/: block.rs  mod.rs  note.rs  user.rs  workspace.rs
crates/remind-core/src/repositories/: block.rs  note.rs  user.rs  workspace.rs
crates/remind-core/src/services/: block.rs  mod.rs  note.rs  user.rs  workspace.rs
crates/remind-core/tests/: block.rs  note.rs  user.rs  workspace.rs
crates/remind-core/tests/fixtures/: block.rs  mod.rs  note.rs  user.rs  workspace.rs
frontend/: package.json  (+1 more)
(+41 files in other folders)
