[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
publish = false
edition = "2024"
version = "0.2.4"

[workspace.dependencies]
tracing = "0.1.41"
remind-core = { path = "crates/remind-core" }
remind-auth = { path = "crates/remind-auth" }
serde = { version = "1.0.219", features = ["derive"] }
async-trait = "0.1.88"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
thiserror = "2.0.12"
chrono = "0.4.41"
