[package]
name = "remind-api"
edition = "2024"

[dependencies]
tracing.workspace = true
remind-core.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace"] }
config = "0.15.11"
dotenvy = "0.15.7"
serde.workspace = true
uuid.workspace = true
serde_json = "1.0.140"
thiserror.workspace = true
async-trait.workspace = true
validator = { version = "0.20.0", features = ["derive"] }
